--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
                     2019
                 </a>
             </h2>
-        <!--Footer-->
+        <!--Mobile-Links-->
+        <div class="double-break"></div>
+            <div class="mobile-links">
+                <a href="" tagert="_blank">Instagram</a><br>
+                <a href="" tagert="_blank">LinkedIn</a><br>
+                <div class="break"></div>
+                <h2>© 2021</h2>
+            </div>
+        <!--Desktop-Links-->
         <div class="footer">
-            <div class="links">
+            <div class="desktop-links">
                 <a href="" tagert="_blank">Instagram</a><br>
                 <a href="" tagert="_blank">LinkedIn</a><br>
                 <div class="break"></div>
