--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
         <!--Mobile-Links-->
         <div class="double-break"></div>
             <div class="mobile-links">
-                <a href="" tagert="_blank">Instagram</a><br>
-                <a href="" tagert="_blank">LinkedIn</a><br>
+                <a href="https://www.instagram.com/ericrosmark/" tagert="_blank">Instagram</a><br>
+                <a href="https://www.linkedin.com/in/ericrosmark/" tagert="_blank">LinkedIn</a><br>
                 <div class="break"></div>
                 <h2>© 2021</h2>
             </div>
         <!--Desktop-Links-->
         <div class="footer">
             <div class="desktop-links">
-                <a href="" tagert="_blank">Instagram</a><br>
-                <a href="" tagert="_blank">LinkedIn</a><br>
+                <a href="https://www.instagram.com/ericrosmark/" tagert="_blank">Instagram</a><br>
+                <a href="https://www.linkedin.com/in/ericrosmark/" tagert="_blank">LinkedIn</a><br>
                 <div class="break"></div>
                 <h2>© 2021</h2>
             </div>
