--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <div class="break"></div>
             <h2>
                 <a href="http://beckmans.se" target="_blank">
-                    Beckmans College of Design
-                    <br>
+                    Beckmans College of Design<br>
                     BFA – Visual Communication<br>
                     2019 – 2022
                 </a>
@@ -140,8 +139,23 @@
                         <div class="paginator-right"></div>
                     </div>
                     <div class="image-container">
+                        <div class="video">
+                            <video src="video/Material Tales.mp4" width="100%" height="100%" autoplay muted loop></video>
+                        </div>
                         <div class="image">
                             <img src="images/eric-rosmark-material-tales-amanda-rascka.png" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/eric-rosmark-material-tales-thomas-wieser.png" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/eric-rosmark-material-tales-isabelle-sjoman.png" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/eric-rosmark-material-tales-kevin-nilsson.png" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/eric-rosmark-material-tales-gabriella-danerlov.png" class="desktop-image">
                         </div>
                     </div>
                 </div>
