--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eric Rösmark</title>
-    <link rel="icon" href="images/eric-rosmark-favicon.png">
+    <link rel="icon" href="images/favicon/eric-rosmark-favicon.png">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="style.css">
@@ -52,8 +52,8 @@
         </div>
         <div class="footer">
             <div class="desktop-links">
-                <a href="https://www.instagram.com/ericrosmark/" tagert="_blank">Instagram</a><br>
-                <a href="https://www.linkedin.com/in/ericrosmark/" tagert="_blank">LinkedIn</a><br>
+                <a href="https://www.instagram.com/ericrosmark/" target="_blank">Instagram</a><br>
+                <a href="https://www.linkedin.com/in/ericrosmark/" target="_blank">LinkedIn</a><br>
                 <div class="break"></div>
                 <h2>© 2021</h2>
             </div>
@@ -69,10 +69,16 @@
                     </div>
                     <div class="image-container">
                         <div class="image">
-                            <img src="images/eric-rosmark-ambre-antique-1.png" class="desktop-image">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-1.png" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/eric-rosmark-ambre-antique-studio-2.jpg" class="desktop-image">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-studio-2.jpg" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-packaging.png" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-logo.png" class="desktop-image">
                         </div>
                     </div>
                 </div>
@@ -105,10 +111,16 @@
                     </div>
                     <div class="image-container">
                         <div class="image">
-                            <img src="images/eric-rosmark-passa.png" class="desktop-image">
+                            <img src="images/passa/eric-rosmark-passa-full.png" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/eric-rosmark-passa.png" class="desktop-image">
+                            <img src="images/passa/eric-rosmark-passa-1.png" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/passa/eric-rosmark-passa-2.png" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/passa/eric-rosmark-passa-3.png" class="desktop-image">
                         </div>
                     </div>
                 </div>
@@ -140,22 +152,22 @@
                     </div>
                     <div class="image-container">
                         <div class="video">
-                            <video src="video/Material Tales.mp4" width="100%" height="100%" autoplay muted loop></video>
+                            <video src="video/Material Tales.mp4" playsinline autoplay muted loop width="100%" height="100%" ></video>
                         </div>
                         <div class="image">
-                            <img src="images/eric-rosmark-material-tales-amanda-rascka.png" class="desktop-image">
+                            <img src="images/material-tales/eric-rosmark-material-tales-amanda-rascka.png" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/eric-rosmark-material-tales-thomas-wieser.png" class="desktop-image">
+                            <img src="images/material-tales/eric-rosmark-material-tales-thomas-wieser.png" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/eric-rosmark-material-tales-isabelle-sjoman.png" class="desktop-image">
+                            <img src="images/material-tales/eric-rosmark-material-tales-isabelle-sjoman.png" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/eric-rosmark-material-tales-kevin-nilsson.png" class="desktop-image">
+                            <img src="images/material-tales/eric-rosmark-material-tales-kevin-nilsson.png" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/eric-rosmark-material-tales-gabriella-danerlov.png" class="desktop-image">
+                            <img src="images/material-tales/eric-rosmark-material-tales-gabriella-danerlov.png" class="desktop-image">
                         </div>
                     </div>
                 </div>
@@ -186,7 +198,7 @@
                     </div>
                     <div class="image-container">
                         <div class="image">
-                            <img src="images/eric-rosmark-sequence-paper-1.png" class="desktop-image">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-1.png" class="desktop-image">
                         </div>
                     </div>
                 </div>
