--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="info-wrapper">
         <h1>Eric Rösmark</h1>
         <h2>Graphic Design + Art Direction<br>
-        <a id="email" href="mailto:ericrosmark@gmail.com">ericrosmark@gmail.com</a></h2>
+        <a id="email" href="mailto:ericrosmark@gmail.com" target="_blank">ericrosmark@gmail.com</a></h2>
         <div class="double-break"></div>
         <p>Based in Stockholm, Sweden. As an interdisciplinary designer his practice sits in between art, design and architecture – striving to create conscious and precise results through design systems, user interaction and visual communication.</p>
         <div class="double-break" id="about-db"></div>
@@ -75,10 +75,10 @@
                             <img src="images/ambre-antique/eric-rosmark-ambre-antique-studio-2.jpg" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-packaging.png" class="desktop-image">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-logo.png" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-logo.png" class="desktop-image">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-packaging.png" class="desktop-image">
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="roles">
                         <h2>Art Direction</h2>
-                        <h2>Brand Identity</h2>
+                        <h2>Visual Identity</h2>
                         <h2>Product Design</h2>
                         <h2>3D Design</h2>
                     </div>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="image-container">
                         <div class="video">
-                            <video src="video/Material Tales.mp4" playsinline autoplay muted loop width="100%" height="100%" ></video>
+                            <video src="video/eric-rosmark-material-tales.mp4" playsinline autoplay muted loop width="100%" height="100%" ></video>
                         </div>
                         <div class="image">
                             <img src="images/material-tales/eric-rosmark-material-tales-amanda-rascka.png" class="desktop-image">
@@ -178,10 +178,13 @@
                     </div>
                     <div class="roles">
                         <h2>Art Direction</h2>
+                        <h2>Visual Identity</h2>
                         <h2>UX / UI Design</h2>
                     </div>
                     <div class="text">
-                        <p>Tasked with creating a visual identity that correlated with the brief “the creation of Magic from Materials” resulted in the visual world that is Material Tales. The project was a collaborative effort between the second year students from the fashion department and the visual communication department at Beckmans College of Design. It was visualised through a responsive website, a short film, still photography of all 35 looks as well as 13 close-up 3D scans of the materials used to create the different garments. Made in collaboration with: Alexander Peri, Alva Nylander, Hedvig Moberg, Joel Eriksson, Linnea Jacobson & Tuva Larsson.</p>
+                        <p>Visual identity made in collaboration with the second year fashion students at Beckmans College of Design showcasing the creation of magic from materials. The project was realized through a responsive website, a short film, still photography of all 35 looks as well as 13 close-up 3D scans of the materials used to create the different garments. Made in collaboration with Alexander Peri, Alva Nylander, Hedvig Moberg, Joel Eriksson, Linnea Jacobson & Tuva Larsson.</p>
+                        <div class="break"></div>
+                        <a id="email" href="https://beckmans.college/materialtales" target="_blank"><p>Experience the visual world of Material Tales</p></a>
                     </div>
                     <div class="year">
                         <h2>2020</h2>
@@ -200,6 +203,22 @@
                         <div class="image">
                             <img src="images/sequence/eric-rosmark-sequence-paper-1.png" class="desktop-image">
                         </div>
+                        <div class="video">
+                            <video src="video/eric-rosmark-sequence-paper-animation-loop.mp4" playsinline autoplay muted loop width="100%" height="100%" ></video>
+                        </div>
+                        <div class="image">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-2-3.png" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-4-5-x2.png" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-6-7.png" class="desktop-image">
+                        </div>
+                        <div class="image">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-8-1.png" class="desktop-image">
+                        </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
@@ -212,7 +231,7 @@
                         <h2>Editorial Design</h2>
                     </div>
                     <div class="text">
-                        <p>Sequence Paper is a magazine about time and our relationship to it. The magazine features a non-linear narrative that affectionately blends together different perspectives regarding the past, present and future. It aims to capture a distinctive yet timeless editorial identity while simultaneously being contemporary. The magazine can be read from both directions in a palindrome-like sequence. Featuring poetry from Johan Nordbäck & Antonella Basagni. Made in collaboration with: Alexander Peri, Clémentine Berglund & Joel Eriksson.</p>
+                        <p>Sequence Paper is a magazine about time and our relationship to it. The magazine features a non-linear narrative that affectionately blends together different perspectives regarding the past, the present and the future. It aims to capture a distinctive yet timeless editorial identity while simultaneously being contemporary. The magazine can be read from both directions in a palindrome-like sequence. Featuring poetry from Johan Nordbäck & Antonella Basagni. Printed at Newspaper Club, London, in uncoated broadsheet format – with an exclusive edition of 50 copies. Made in collaboration with: Alexander Peri, Clémentine Berglund & Joel Eriksson.</p>
                     </div>
                     <div class="year">
                         <h2>2021</h2>
