--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                             <img src="images/ambre-antique/eric-rosmark-ambre-antique-1.png" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-studio-2.jpg" class="desktop-image">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-studio-2.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-logo.png" class="desktop-image">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-logo.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-packaging.png" class="desktop-image">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-packaging.png" class="desktop-image" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -111,16 +111,16 @@
                     </div>
                     <div class="image-container">
                         <div class="image">
-                            <img src="images/passa/eric-rosmark-passa-full.png" class="desktop-image">
+                            <img src="images/passa/eric-rosmark-passa-full.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/passa/eric-rosmark-passa-1.png" class="desktop-image">
+                            <img src="images/passa/eric-rosmark-passa-1.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/passa/eric-rosmark-passa-2.png" class="desktop-image">
+                            <img src="images/passa/eric-rosmark-passa-2.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/passa/eric-rosmark-passa-3.png" class="desktop-image">
+                            <img src="images/passa/eric-rosmark-passa-3.png" class="desktop-image" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -152,22 +152,22 @@
                     </div>
                     <div class="image-container">
                         <div class="video">
-                            <video src="video/eric-rosmark-material-tales.mp4" playsinline autoplay muted loop width="100%" height="100%" ></video>
+                            <video src="video/eric-rosmark-material-tales.mp4" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
                         </div>
                         <div class="image">
-                            <img src="images/material-tales/eric-rosmark-material-tales-amanda-rascka.png" class="desktop-image">
+                            <img src="images/material-tales/eric-rosmark-material-tales-amanda-rascka.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/material-tales/eric-rosmark-material-tales-thomas-wieser.png" class="desktop-image">
+                            <img src="images/material-tales/eric-rosmark-material-tales-thomas-wieser.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/material-tales/eric-rosmark-material-tales-isabelle-sjoman.png" class="desktop-image">
+                            <img src="images/material-tales/eric-rosmark-material-tales-isabelle-sjoman.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/material-tales/eric-rosmark-material-tales-kevin-nilsson.png" class="desktop-image">
+                            <img src="images/material-tales/eric-rosmark-material-tales-kevin-nilsson.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/material-tales/eric-rosmark-material-tales-gabriella-danerlov.png" class="desktop-image">
+                            <img src="images/material-tales/eric-rosmark-material-tales-gabriella-danerlov.png" class="desktop-image" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -201,22 +201,22 @@
                     </div>
                     <div class="image-container">
                         <div class="image">
-                            <img src="images/sequence/eric-rosmark-sequence-paper-1.png" class="desktop-image">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-1.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="video">
-                            <video src="video/eric-rosmark-sequence-paper-animation-loop.mp4" playsinline autoplay muted loop width="100%" height="100%" ></video>
+                            <video src="video/eric-rosmark-sequence-paper-animation-loop.mp4" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
                         </div>
                         <div class="image">
-                            <img src="images/sequence/eric-rosmark-sequence-paper-page-2-3.png" class="desktop-image">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-2-3.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/sequence/eric-rosmark-sequence-paper-page-4-5-x2.png" class="desktop-image">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-4-5-x2.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/sequence/eric-rosmark-sequence-paper-page-6-7.png" class="desktop-image">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-6-7.png" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/sequence/eric-rosmark-sequence-paper-page-8-1.png" class="desktop-image">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-8-1.png" class="desktop-image" loading="lazy">
                         </div>
                         </div>
                     </div>
