updated info and copyright

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="https://www.instagram.com/ericrosmark/" target="_blank">Instagram</a><br>
                 <a href="https://www.linkedin.com/in/ericrosmark/" target="_blank">LinkedIn</a><br>
                 <div class="break"></div>
-                <h2>© 2021</h2>
+                <h2>© 2022</h2>
             </div>
         </div>
     </section>
@@ -94,7 +94,7 @@
                         <h2>3D Design</h2>
                     </div>
                     <div class="text">
-                        <p>Ambre Antique is a fictitious project aimed to challenge the convention of what an oriental perfume can be. The vial is a modern interpretation of black-figure pottery, a technique used in ancient Greece between the 7th - 5th centuries BC, where the figures that covered the ceramics were painted in black against the red body of the vessels. Originally launched by Coty in 1905, 115 years ago, the new iteration of Ambre Antique strives to join the colourful design language of antique Greek vases with a contemporary minimalism to create friction between the two aesthetics.</p>
+                        <p>Visual identity for the perfume Ambre Antique by Coty released in 1905, an identity intended to challenge the convention of oriental perfumes. The new iteration of Ambre Antique takes inspiration from the design language of ancient Greek black-figured ceramics to combine it with a contemporary minimalism – creating a friction between the two aesthetics. Mixed media of 3D rendering and physical packaging design.</p>
                     </div>
                     <div class="year">
                         <h2>2020</h2>
